--- a/app/index.html
+++ b/app/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Webpack Turorial</title>
-  <link rel="stylesheet" href="styles.css">
+  <title>Webpack Tutorial</title>
 </head>
 <body>
   <div id="app"></div>
